setting headless property

--- a/serenity.properties
+++ b/serenity.properties
@@ -22,3 +22,4 @@ serenity.browser.width=1024
 serenity.browser.height=768
 serenity.keep.unscaled.screenshots=true
 serenity.logging=QUIET
+chrome.switches=--headless
